--- a/src/components/ContentHome/ContentHome.css
+++ b/src/components/ContentHome/ContentHome.css
@@ -5,3 +5,17 @@
     flex-direction: column;
     gap: 3rem;
 }
+
+@media screen and (min-width: 767px) {
+    .contentHome {
+        padding-top: 2rem;
+    }
+}
+
+@media screen and (min-width: 1439px) {
+    .contentHome {
+        flex-direction: row;
+        gap: 2rem;
+        margin-top: 9rem;
+    }
+}
