--- a/src/components/ContentHeroDestination/ContentHeroDestination.css
+++ b/src/components/ContentHeroDestination/ContentHeroDestination.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items:center;
     justify-content: space-between;
+    gap: 2rem;
     padding: 1rem;
 }
 
@@ -16,13 +17,28 @@
     letter-spacing: 4px;
 }
 
-.title span{
+.titleDestination span{
     color: #D0D6f9;
 }
 
-.wrapperDestination img {
+.imgPlanets{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.imgPlanets img {
     height: 200px;
     width: auto;
+}
+
+.menu-and-details {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
 }
 
 .planetsMenu {
@@ -41,6 +57,12 @@
     color: #FFFFFF;
     text-align: center;
     padding-bottom: 5px;
+    text-transform: uppercase;
+    font-size: .9rem
+}
+
+.planetsItem:hover {
+    border-bottom: 3px solid #D0D6f9;
 }
 
 .active {
@@ -66,16 +88,24 @@
 .textPlanet {
     font-family: 'Barlow Condensed', sans-serif;
     font-size: .9rem;
-    color: #FFFFFF;
+    color: #D0D6f9;
     text-align: center;
     font-weight: 200;
     letter-spacing: 2px;
 }
 
+.lineDestination {
+    border-bottom: 2px solid grey;;
+    position:absolute;
+    width: 90%;
+    bottom: 3rem;
+}
+
 .distance-time {
+    padding-top: 2rem;
     display:flex;
     flex-direction: column;
-    gap: .5rem;
+    gap: 1rem;
     color: #FFFFFF;
 }
 
@@ -84,7 +114,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: .5rem;
 }
 
 .distance-time h4{
@@ -92,6 +122,7 @@
     font-size: 14px;
     letter-spacing: 2.35px;
     font-weight: 200;
+    color: #D0D6f9;
 }
 
 .distance-time h3 {
@@ -101,3 +132,36 @@
     text-transform: uppercase;
 }
 
+@media screen and (min-width: 767px) {
+
+    .wrapperDestination{
+        align-items: normal;
+        padding: 2rem;
+    }
+    .titleDestination {
+        padding-top: 1rem;
+    }
+
+    .imgPlanets img {
+        width: 250px;
+    }
+
+    .titlePlanet{
+        font-size: 70px;
+    }
+
+    .textPlanet {
+        padding-inline: 3rem;
+    }
+
+    .distance-time {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 4rem;
+        padding-bottom: 2rem;
+    }
+}
+
+@media screen and (min-width: 1439px) {
+}
