--- a/src/components/NavBarList/NavBarList.css
+++ b/src/components/NavBarList/NavBarList.css
@@ -9,7 +9,7 @@
     bottom: 0;
     display:flex;
     flex-direction: column;
-    align-items: end;
+    align-items:flex-end;
     gap: 5rem;
     background-color: transparent;
     backdrop-filter: blur(50px);
