--- a/src/Pages/HeroDestination/HeroDestination.css
+++ b/src/Pages/HeroDestination/HeroDestination.css
@@ -16,5 +16,6 @@
 @media screen and (min-width: 1439px) {
     .heroDestination {
         background-image: url("./destination/background-destination-desktop.jpg");
+        height: 100vh;
     }
 }
