--- a/src/components/ContentHeroDestination/ContentHeroDestination.css
+++ b/src/components/ContentHeroDestination/ContentHeroDestination.css
@@ -53,12 +53,13 @@
 }
 
 .planetsItem  {
+    font-family:'Barlow Condensed', sans-serif;
     text-decoration: none;
     color: #FFFFFF;
     text-align: center;
     padding-bottom: 5px;
     text-transform: uppercase;
-    font-size: .9rem
+    letter-spacing: 2px;
 }
 
 .planetsItem:hover {
@@ -164,4 +165,60 @@
 }
 
 @media screen and (min-width: 1439px) {
+    .wrapperDestination {
+        padding: 0 12rem;
+    }
+
+    .titleDestination {
+        font-size: 22px;
+    }
+
+    .img-and-details {
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .imgPlanets {
+        flex-basis: 55%;
+    }
+
+    .imgPlanets img {
+        width: 350px;
+        height: 350px;
+    }
+
+    .menu-and-details {
+        flex-basis: 45%;
+        align-items: flex-start;
+    }
+
+    .planetsMenu {
+        align-items: flex-start;
+    }
+
+    .planet {
+        align-items: flex-start;
+        gap: 1.5rem;
+    }
+
+    .titlePlanet {
+        font-size: 90px;
+    }
+
+    .textPlanet {
+        text-align: left;
+        padding-left: 0;
+        padding-right: 8rem;
+        line-height: 1.75;
+    }
+
+    .lineDestination {
+        bottom: 11rem;
+        width: 25%;
+    }
+
+    .distance-time {
+        padding-top:3rem;
+    }
 }
