--- a/src/components/ContentHeroDestination/ContentHeroDestination.css
+++ b/src/components/ContentHeroDestination/ContentHeroDestination.css
@@ -15,6 +15,7 @@
     font-size: 18px;
     font-weight: 200;
     letter-spacing: 4px;
+    text-transform: uppercase;
 }
 
 .titleDestination span{
