--- a/src/components/ContentHeroCrew/ContentHeroCrew.css
+++ b/src/components/ContentHeroCrew/ContentHeroCrew.css
@@ -15,7 +15,7 @@
 }
 
 .imgCrew {
-    width: 200px;
+    width: 290px;
     height: 300px;
     background-image: url("../../Pages/HeroCrew/crew/image-douglas-hurley.png");
     background-size: contain;
@@ -48,7 +48,7 @@
     background-color: #d0d6f9;
 }
 
-.active { 
+.active-back { 
     background-color: #FFFFFF;
 }
 
@@ -84,6 +84,60 @@
     font-weight: 200;
     font-size: 1.1rem;
     padding-top: .5rem;
+}
+
+@media screen and (min-width: 767px ){
+
+    .wrapperCrew {
+        padding: 2rem;
+        align-items: flex-start;
+        gap: 1rem;
+        
+    }
+
+    .img-and-details-crew {
+        display:flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+
     
+    .list-and-details {
+        display:flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        padding-inline: 8rem;
+        line-height: 2rem;
+    }
+
+    .imageCrew{
+        border: none;
+        max-height: 400px;
+    }
+
+    .imgCrew {
+        height: 330px;
+        width: 350px;
+    }
     
+    .details {
+        padding:0;
+        gap: 0.5rem;
+    }
+
+    .jobCrew {
+        padding: 0;
+        font-size: 1.2rem;
+    }
+
+    .nameCrew{
+        padding: 0;
+        font-size: 2rem;
+    }
+
+    .textCrew{
+        padding: 0;
+    }
 }
