--- a/src/components/ContentHeroTechnology/ContentHeroTechnology.css
+++ b/src/components/ContentHeroTechnology/ContentHeroTechnology.css
@@ -15,10 +15,6 @@
 }
 
 .imageTechnology{
-    background-image: url("../../Pages/HeroTechnology/technology/image-launch-vehicle-landscape.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
     width: 100%;
     height: 200px;
     padding: 2rem 0;
@@ -57,6 +53,12 @@
 
 .circleButtonTech:hover {
     background-color:#FFFFFF;
+    color: #0b0d17;
+    border-color: transparent;
+}
+
+.activeTech {
+    background-color: #FFFFFF;
     color: #0b0d17;
     border-color: transparent;
 }
@@ -124,7 +126,6 @@
     }
 
     .imageTechnology{
-        background-image: url("../../Pages/HeroTechnology/technology/image-launch-vehicle-portrait.jpg");
         height: 400px;
 
     }
