--- a/src/components/ContentHeroDestination/ContentHeroDestination.css
+++ b/src/components/ContentHeroDestination/ContentHeroDestination.css
@@ -98,13 +98,10 @@
 
 .lineDestination {
     border-bottom: 2px solid grey;;
-    position:absolute;
     width: 90%;
-    bottom: 3rem;
 }
 
 .distance-time {
-    padding-top: 2rem;
     display:flex;
     flex-direction: column;
     gap: 1rem;
@@ -172,7 +169,6 @@
 
 @media screen and (min-width: 1439px) {
     .wrapperDestination {
-        padding: 0 12rem;
     }
 
     .titleDestination {
@@ -186,7 +182,8 @@
     }
 
     .imgPlanets {
-        flex-basis: 55%;
+        padding-left: 5rem;
+        flex-basis: 40%;
     }
 
     .imgPlanets img {
@@ -217,14 +214,5 @@
         padding-left: 0;
         padding-right: 8rem;
         line-height: 1.75;
-    }
-
-    .lineDestination {
-        bottom: 11rem;
-        width: 25%;
-    }
-
-    .distance-time {
-        padding-top:3rem;
     }
 }
