--- a/src/components/ContentHeroTechnology/ContentHeroTechnology.css
+++ b/src/components/ContentHeroTechnology/ContentHeroTechnology.css
@@ -16,8 +16,9 @@
 
 .imageTechnology{
     width: 100%;
-    height: 200px;
-    padding: 2rem 0;
+    height: 300px;
+    object-fit:fill;
+    margin: 0;
 }
 
 .list-and-details-technology{
@@ -108,7 +109,10 @@
     }
 
     .imageTechnology{
-        height: 250px;
+        margin: 0;
+        padding:0;
+        height: 300px;
+        object-fit: fill;
     }
 
     .nameTechnology{
